force-app/main/default/objects/cdcpc__Rupture_Disc__c/cdcpc__Rupture_Disc__c.object-meta.xml
<CustomObject>
    <label>Rupture Disc</label>
    <nameField>
        <displayFormat>RD-{0000000}</displayFormat>
        <label>Rupture Disc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rupture Discs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>