force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Add_Integral_B_D_I_Integral_BDI_FLX_Sen__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Add_Integral_B_D_I_Integral_BDI_FLX_Sen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Integral B.D.I./Integral BDI-FLX Sen</label>
    <type>Checkbox</type>
</CustomField>