force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Add_Integral_B_D_I_Intgrl_BDIFLX_Backend__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Add_Integral_B_D_I_Intgrl_BDIFLX_Backend__c</fullName>
    <label>Add Integral BDIIntegral BDIFLX Backend</label>
    <length>2</length>
    <type>Text</type>
</CustomField>