force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Additional_Documents__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Additional_Documents__c</fullName>
    <label>Additional Documents</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>