force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Alt_RG3DRT__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Alt_RG3DRT__c</fullName>
    <label>Alternate RG3DRT</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>