force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Alt_RTPS1_Desc__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Alt_RTPS1_Desc__c</fullName>
    <label>Alternate RTPS1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>