force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Animal_Derivative__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Animal_Derivative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal Derivative</label>
    <type>Checkbox</type>
</CustomField>