force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__ASME_Section_VIII_Division_1__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ASME_Section_VIII_Division_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASME Section VIII Division 1</label>
    <type>Checkbox</type>
</CustomField>