force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__ASME_Section_VIII_Division_1_Backend__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ASME_Section_VIII_Division_1_Backend__c</fullName>
    <label>ASME Section VIII Division 1 Backend</label>
    <length>2</length>
    <type>Text</type>
</CustomField>