force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Assigned_RangeType__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Assigned_RangeType__c</fullName>
    <label>Assigned RangeType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>