force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__ASSYPARTNOBASE__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ASSYPARTNOBASE__c</fullName>
    <label>ASSYPARTNOBASE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>