force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Back_Pressure_Value__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Back_Pressure_Value__c</fullName>
    <label>Back Pressure Value</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>