force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__BMRCHECK__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__BMRCHECK__c</fullName>
    <label>BMRCHECK</label>
    <precision>17</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>