force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Bypass__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Bypass__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bypass</label>
    <type>Checkbox</type>
</CustomField>