force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Cable_Length__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Cable_Length__c</fullName>
    <label>Cable Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>