force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Certificate_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Certificate_of_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Origin</label>
    <type>Checkbox</type>
</CustomField>