force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Coefficient_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Coefficient_of_Discharge__c</fullName>
    <label>Coefficient of Discharge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.62</fullName>
            </value>
            <value>
                <fullName>0.68</fullName>
            </value>
            <value>
                <fullName>0.73</fullName>
            </value>
            <value>
                <fullName>0.80</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>