force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Comply_with_Regels_Voor_Tosellan_Oder_Dr__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Comply_with_Regels_Voor_Tosellan_Oder_Dr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comply with Regels Voor Tosellan Oder Dr</label>
    <type>Checkbox</type>
</CustomField>