force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Components_Flag__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Components_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Components Flag</label>
    <type>Checkbox</type>
</CustomField>