force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Configurator_Instance__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Configurator_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Configurator Instance associated with the RuptureDisc Part Configurator Instance</description>
    <label>Configurator Instance</label>
    <referenceTo>cdcpc__ConfiguratorInstance__c</referenceTo>
    <relationshipLabel>RD</relationshipLabel>
    <relationshipName>RD</relationshipName>
    <type>Lookup</type>
</CustomField>