force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Conv_SpecificVolume_at_90_Inlet_Pressur__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Conv_SpecificVolume_at_90_Inlet_Pressur__c</fullName>
    <label>Conv SpecificVolume at 90% Inlet Pressur</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>