force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Converted_Liquid_Density_at_inlet__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Converted_Liquid_Density_at_inlet__c</fullName>
    <label>Converted Liquid Density at inlet</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>