force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Converted_Relieving_Temperature__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Converted_Relieving_Temperature__c</fullName>
    <label>Converted Relieving Temperature</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>