force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Converted_Specific_Volume_at_Inlet__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Converted_Specific_Volume_at_Inlet__c</fullName>
    <label>Converted Specific Volume at Inlet</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>