force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Converted_Temperature_Setting__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Converted_Temperature_Setting__c</fullName>
    <label>Converted Temperature Setting</label>
    <precision>14</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>