force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__ConvertedSaturationPressure_at_InletTemp__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ConvertedSaturationPressure_at_InletTemp__c</fullName>
    <label>ConvertedSaturationPressure at InletTemp</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>