force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__ConvertedSpecificVolumeat90_ofInletPress__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ConvertedSpecificVolumeat90_ofInletPress__c</fullName>
    <label>ConvertedSpecificVolumeat90%ofInletPress</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>