force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__ConvVapor_pres_corres_to_stagnation_temp__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ConvVapor_pres_corres_to_stagnation_temp__c</fullName>
    <label>ConvVapor pres corres to stagnation temp</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>