force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Coshh__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Coshh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coshh</label>
    <type>Checkbox</type>
</CustomField>