force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__CSA_Marking_CRN_Number__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__CSA_Marking_CRN_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSA Marking (CRN Number)</label>
    <type>Checkbox</type>
</CustomField>