force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__CSA_Marking_CRN_Number_Backend__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__CSA_Marking_CRN_Number_Backend__c</fullName>
    <label>CSA Marking (CRN Number) Backend</label>
    <length>2</length>
    <type>Text</type>
</CustomField>