force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__CU_TR__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__CU_TR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CU TR</label>
    <type>Checkbox</type>
</CustomField>