force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__CU_TR_Backend__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__CU_TR_Backend__c</fullName>
    <label>CU TR Backend</label>
    <length>2</length>
    <type>Text</type>
</CustomField>