force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Customer_Specified_Media__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Customer_Specified_Media__c</fullName>
    <label>Customer Specified Media</label>
    <length>30</length>
    <type>Text</type>
</CustomField>