force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Density__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Density__c</fullName>
    <label>Density</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>