force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Density_at_90_Saturation_Pressure_Units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Density_at_90_Saturation_Pressure_Units__c</fullName>
    <label>Density at 90% Saturation Pressure Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Density_Units</valueSetName>
    </valueSet>
</CustomField>