force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Density_units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Density_units__c</fullName>
    <label>Density units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Density_Units</valueSetName>
    </valueSet>
</CustomField>