force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Derate_Percent__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Derate_Percent__c</fullName>
    <label>Derate Percent</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>