force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Diagram_Override__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Diagram_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change made to a configurator drawing</label>
    <type>Checkbox</type>
</CustomField>