force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Disc_Material_of_Construction__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Disc_Material_of_Construction__c</fullName>
    <label>Disc Material of Construction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>