force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Dodd_Frank_Conflict_Minerals__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Dodd_Frank_Conflict_Minerals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dodd Frank – Conflict Minerals</label>
    <type>Checkbox</type>
</CustomField>