force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Drawing_Dim_C__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Drawing_Dim_C__c</fullName>
    <label>Drawing Dim C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>