force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Drawing_IINO_Number__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Drawing_IINO_Number__c</fullName>
    <label>Drawing IINO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>