force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Electro_polish__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Electro_polish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electro-polish</label>
    <type>Checkbox</type>
</CustomField>