force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Electro_polish_Backend__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Electro_polish_Backend__c</fullName>
    <label>Electro-polish Backend</label>
    <length>2</length>
    <type>Text</type>
</CustomField>