force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__End_Connection__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__End_Connection__c</fullName>
    <label>End Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>