force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Engineering_Notes__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Engineering_Notes__c</fullName>
    <label>Engineering Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>