force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Enter_Different_Temperature_Units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Enter_Different_Temperature_Units__c</fullName>
    <label>Enter Different Temperature Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Temperature_Units</valueSetName>
    </valueSet>
</CustomField>