force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Enter_Relieving_Pressure_units__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Enter_Relieving_Pressure_units__c</fullName>
    <label>Enter Relieving Pressure units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cdcpc__Pressure_Units</valueSetName>
    </valueSet>
</CustomField>