force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__EO_Document_IDs__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__EO_Document_IDs__c</fullName>
    <label>Document IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>