force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__EO_ORV__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__EO_ORV__c</fullName>
    <label>ORV Override</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>