force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__EO_OW__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__EO_OW__c</fullName>
    <label>OW Override</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>