force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__EO_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__EO_Part_Number__c</fullName>
    <label>Part Number Override</label>
    <length>50</length>
    <type>Text</type>
</CustomField>