force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Sizing &amp; Capacity</fullName>
            </value>
            <value>
                <fullName>Sizing</fullName>
                <isActive>false</isActive>
                <label>Sizing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>