force-app/main/default/objects/cdcpc__Rupture_Disc__c/fields/cdcpc__Gasket_Material__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Gasket_Material__c</fullName>
    <label>Gasket Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>